tests/baselines/reference/ES5For-ofTypeCheck7.errors.txt
ES5For-ofTypeCheck7.ts(2,15): error TS2461: Type 'number' is not an array type.


==== ES5For-ofTypeCheck7.ts (1 errors) ====
    var union: string | number;
    for (var v of union) { }
                  ~~~~~
!!! error TS2461: Type 'number' is not an array type.